gen/com/intellij/plugins/thrift/lang/parser/ThriftParser.java
// This is a generated file. Not intended for manual editing.
package com.intellij.plugins.thrift.lang.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.intellij.plugins.thrift.lang.lexer.ThriftTokenTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class ThriftParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == BASE_TYPE) {
      r = BaseType(b, 0);
    }
    else if (t == CONST) {
      r = Const(b, 0);
    }
    else if (t == CONST_LIST) {
      r = ConstList(b, 0);
    }
    else if (t == CONST_MAP) {
      r = ConstMap(b, 0);
    }
    else if (t == CONST_VALUE) {
      r = ConstValue(b, 0);
    }
    else if (t == CONTAINER_TYPE) {
      r = ContainerType(b, 0);
    }
    else if (t == CPP_TYPE) {
      r = CppType(b, 0);
    }
    else if (t == CUSTOM_TYPE) {
      r = CustomType(b, 0);
    }
    else if (t == DEFINITION_NAME) {
      r = DefinitionName(b, 0);
    }
    else if (t == DOUBLE_CONSTANT) {
      r = DoubleConstant(b, 0);
    }
    else if (t == ENUM) {
      r = Enum(b, 0);
    }
    else if (t == EXCEPTION) {
      r = Exception(b, 0);
    }
    else if (t == FIELD) {
      r = Field(b, 0);
    }
    else if (t == FIELD_ID) {
      r = FieldID(b, 0);
    }
    else if (t == FIELD_REQ) {
      r = FieldReq(b, 0);
    }
    else if (t == FIELD_TYPE) {
      r = FieldType(b, 0);
    }
    else if (t == FUNCTION) {
      r = Function(b, 0);
    }
    else if (t == FUNCTION_TYPE) {
      r = FunctionType(b, 0);
    }
    else if (t == GENERIC_TYPE) {
      r = GenericType(b, 0);
    }
    else if (t == INCLUDE) {
      r = Include(b, 0);
    }
    else if (t == INT_CONSTANT) {
      r = IntConstant(b, 0);
    }
    else if (t == LIST_SEPARATOR) {
      r = ListSeparator(b, 0);
    }
    else if (t == LIST_TYPE) {
      r = ListType(b, 0);
    }
    else if (t == MAP_TYPE) {
      r = MapType(b, 0);
    }
    else if (t == NAMESPACE) {
      r = Namespace(b, 0);
    }
    else if (t == NAMESPACE_SCOPE) {
      r = NamespaceScope(b, 0);
    }
    else if (t == SENUM) {
      r = Senum(b, 0);
    }
    else if (t == SERVICE) {
      r = Service(b, 0);
    }
    else if (t == SERVICE_SUPER_NAME) {
      r = ServiceSuperName(b, 0);
    }
    else if (t == SET_TYPE) {
      r = SetType(b, 0);
    }
    else if (t == SIMPLE_BASE_TYPE) {
      r = SimpleBaseType(b, 0);
    }
    else if (t == STRUCT) {
      r = Struct(b, 0);
    }
    else if (t == THROWS) {
      r = Throws(b, 0);
    }
    else if (t == TYPE_ANNOTATION) {
      r = TypeAnnotation(b, 0);
    }
    else if (t == TYPE_ANNOTATION_LIST) {
      r = TypeAnnotationList(b, 0);
    }
    else if (t == TYPE_ANNOTATIONS) {
      r = TypeAnnotations(b, 0);
    }
    else if (t == TYPEDEF) {
      r = Typedef(b, 0);
    }
    else if (t == UNION) {
      r = Union(b, 0);
    }
    else if (t == XSD_ATTRS) {
      r = XsdAttrs(b, 0);
    }
    else if (t == XSD_FIELD_OPTIONS) {
      r = XsdFieldOptions(b, 0);
    }
    else if (t == ENUM_FIELD) {
      r = enumField(b, 0);
    }
    else if (t == ENUM_FIELDS) {
      r = enumFields(b, 0);
    }
    else if (t == FIELDS) {
      r = fields(b, 0);
    }
    else if (t == SEMUN_FIELD) {
      r = semunField(b, 0);
    }
    else if (t == SENUM_BODY) {
      r = senumBody(b, 0);
    }
    else if (t == SERVICE_BODY) {
      r = serviceBody(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return Document(b, l + 1);
  }

  /* ********************************************************** */
  // SimpleBaseType TypeAnnotations?
  public static boolean BaseType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BaseType")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BASE_TYPE, "<base type>");
    r = SimpleBaseType(b, l + 1);
    r = r && BaseType_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // TypeAnnotations?
  private static boolean BaseType_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BaseType_1")) return false;
    TypeAnnotations(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // 'const' FieldType DefinitionName '=' ConstValue ListSeparator?
  public static boolean Const(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Const")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CONST, "<const>");
    r = consumeToken(b, "const");
    p = r; // pin = 1
    r = r && report_error_(b, FieldType(b, l + 1));
    r = p && report_error_(b, DefinitionName(b, l + 1)) && r;
    r = p && report_error_(b, consumeToken(b, EQUALS)) && r;
    r = p && report_error_(b, ConstValue(b, l + 1)) && r;
    r = p && Const_5(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // ListSeparator?
  private static boolean Const_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Const_5")) return false;
    ListSeparator(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // '[' (ConstValue ListSeparator?)* ']'
  public static boolean ConstList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstList")) return false;
    if (!nextTokenIs(b, LEFTBRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFTBRACKET);
    r = r && ConstList_1(b, l + 1);
    r = r && consumeToken(b, RIGHTBRACKET);
    exit_section_(b, m, CONST_LIST, r);
    return r;
  }

  // (ConstValue ListSeparator?)*
  private static boolean ConstList_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstList_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!ConstList_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ConstList_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // ConstValue ListSeparator?
  private static boolean ConstList_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstList_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ConstValue(b, l + 1);
    r = r && ConstList_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ListSeparator?
  private static boolean ConstList_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstList_1_0_1")) return false;
    ListSeparator(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // '{' (ConstValue ':' ConstValue ListSeparator?)* '}'
  public static boolean ConstMap(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstMap")) return false;
    if (!nextTokenIs(b, LEFTCURLYBRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFTCURLYBRACE);
    r = r && ConstMap_1(b, l + 1);
    r = r && consumeToken(b, RIGHTCURLYBRACE);
    exit_section_(b, m, CONST_MAP, r);
    return r;
  }

  // (ConstValue ':' ConstValue ListSeparator?)*
  private static boolean ConstMap_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstMap_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!ConstMap_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ConstMap_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // ConstValue ':' ConstValue ListSeparator?
  private static boolean ConstMap_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstMap_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ConstValue(b, l + 1);
    r = r && consumeToken(b, COLON);
    r = r && ConstValue(b, l + 1);
    r = r && ConstMap_1_0_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ListSeparator?
  private static boolean ConstMap_1_0_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstMap_1_0_3")) return false;
    ListSeparator(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // IntConstant | DoubleConstant | Literal | Identifier | ConstList | ConstMap
  public static boolean ConstValue(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstValue")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONST_VALUE, "<const value>");
    r = IntConstant(b, l + 1);
    if (!r) r = DoubleConstant(b, l + 1);
    if (!r) r = consumeToken(b, LITERAL);
    if (!r) r = consumeToken(b, IDENTIFIER);
    if (!r) r = ConstList(b, l + 1);
    if (!r) r = ConstMap(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // SimpleContainerType TypeAnnotations?
  public static boolean ContainerType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ContainerType")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONTAINER_TYPE, "<container type>");
    r = SimpleContainerType(b, l + 1);
    r = r && ContainerType_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // TypeAnnotations?
  private static boolean ContainerType_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ContainerType_1")) return false;
    TypeAnnotations(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // 'cpp_type' Literal
  public static boolean CppType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CppType")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CPP_TYPE, "<cpp type>");
    r = consumeToken(b, "cpp_type");
    p = r; // pin = 1
    r = r && consumeToken(b, LITERAL);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // Identifier
  public static boolean CustomType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CustomType")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, CUSTOM_TYPE, r);
    return r;
  }

  /* ********************************************************** */
  // Identifier
  public static boolean DefinitionName(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DefinitionName")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, DEFINITION_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // topLevelElement*
  static boolean Document(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Document")) return false;
    int c = current_position_(b);
    while (true) {
      if (!topLevelElement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Document", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // ('+' | '-')? Number
  public static boolean DoubleConstant(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DoubleConstant")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DOUBLE_CONSTANT, "<double constant>");
    r = DoubleConstant_0(b, l + 1);
    r = r && consumeToken(b, NUMBER);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ('+' | '-')?
  private static boolean DoubleConstant_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DoubleConstant_0")) return false;
    DoubleConstant_0_0(b, l + 1);
    return true;
  }

  // '+' | '-'
  private static boolean DoubleConstant_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DoubleConstant_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, MINUS);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // 'enum' DefinitionName '{' enumFields '}' TypeAnnotations?
  public static boolean Enum(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Enum")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ENUM, "<enum>");
    r = consumeToken(b, "enum");
    p = r; // pin = 1
    r = r && report_error_(b, DefinitionName(b, l + 1));
    r = p && report_error_(b, consumeToken(b, LEFTCURLYBRACE)) && r;
    r = p && report_error_(b, enumFields(b, l + 1)) && r;
    r = p && report_error_(b, consumeToken(b, RIGHTCURLYBRACE)) && r;
    r = p && Enum_5(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // TypeAnnotations?
  private static boolean Enum_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Enum_5")) return false;
    TypeAnnotations(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // 'exception' DefinitionName '{' fields '}' TypeAnnotations?
  public static boolean Exception(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Exception")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, EXCEPTION, "<exception>");
    r = consumeToken(b, "exception");
    p = r; // pin = 1
    r = r && report_error_(b, DefinitionName(b, l + 1));
    r = p && report_error_(b, consumeToken(b, LEFTCURLYBRACE)) && r;
    r = p && report_error_(b, fields(b, l + 1)) && r;
    r = p && report_error_(b, consumeToken(b, RIGHTCURLYBRACE)) && r;
    r = p && Exception_5(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // TypeAnnotations?
  private static boolean Exception_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Exception_5")) return false;
    TypeAnnotations(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // FieldID? FieldReq? FieldType DefinitionName ('=' ConstValue)? XsdFieldOptions TypeAnnotations? ListSeparator?
  public static boolean Field(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Field")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, FIELD, "<field>");
    r = Field_0(b, l + 1);
    r = r && Field_1(b, l + 1);
    r = r && FieldType(b, l + 1);
    p = r; // pin = 3
    r = r && report_error_(b, DefinitionName(b, l + 1));
    r = p && report_error_(b, Field_4(b, l + 1)) && r;
    r = p && report_error_(b, XsdFieldOptions(b, l + 1)) && r;
    r = p && report_error_(b, Field_6(b, l + 1)) && r;
    r = p && Field_7(b, l + 1) && r;
    exit_section_(b, l, m, r, p, fieldRecovery_parser_);
    return r || p;
  }

  // FieldID?
  private static boolean Field_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Field_0")) return false;
    FieldID(b, l + 1);
    return true;
  }

  // FieldReq?
  private static boolean Field_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Field_1")) return false;
    FieldReq(b, l + 1);
    return true;
  }

  // ('=' ConstValue)?
  private static boolean Field_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Field_4")) return false;
    Field_4_0(b, l + 1);
    return true;
  }

  // '=' ConstValue
  private static boolean Field_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Field_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EQUALS);
    r = r && ConstValue(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // TypeAnnotations?
  private static boolean Field_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Field_6")) return false;
    TypeAnnotations(b, l + 1);
    return true;
  }

  // ListSeparator?
  private static boolean Field_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Field_7")) return false;
    ListSeparator(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // IntConstant ':'
  public static boolean FieldID(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FieldID")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FIELD_ID, "<field id>");
    r = IntConstant(b, l + 1);
    r = r && consumeToken(b, COLON);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'required' | 'optional'
  public static boolean FieldReq(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FieldReq")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FIELD_REQ, "<field req>");
    r = consumeToken(b, "required");
    if (!r) r = consumeToken(b, "optional");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // BaseType | ContainerType | CustomType
  public static boolean FieldType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FieldType")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FIELD_TYPE, "<field type>");
    r = BaseType(b, l + 1);
    if (!r) r = ContainerType(b, l + 1);
    if (!r) r = CustomType(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'oneway'? FunctionType DefinitionName '(' fieldsWithBraceRecovery ')' Throws? TypeAnnotations?
  public static boolean Function(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Function")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, FUNCTION, "<function>");
    r = Function_0(b, l + 1);
    r = r && FunctionType(b, l + 1);
    r = r && DefinitionName(b, l + 1);
    p = r; // pin = 3
    r = r && report_error_(b, consumeToken(b, LEFTBRACE));
    r = p && report_error_(b, fieldsWithBraceRecovery(b, l + 1)) && r;
    r = p && report_error_(b, consumeToken(b, RIGHTBRACE)) && r;
    r = p && report_error_(b, Function_6(b, l + 1)) && r;
    r = p && Function_7(b, l + 1) && r;
    exit_section_(b, l, m, r, p, functionRecovery_parser_);
    return r || p;
  }

  // 'oneway'?
  private static boolean Function_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Function_0")) return false;
    consumeToken(b, "oneway");
    return true;
  }

  // Throws?
  private static boolean Function_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Function_6")) return false;
    Throws(b, l + 1);
    return true;
  }

  // TypeAnnotations?
  private static boolean Function_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Function_7")) return false;
    TypeAnnotations(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // 'void' | FieldType
  public static boolean FunctionType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FunctionType")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FUNCTION_TYPE, "<function type>");
    r = consumeToken(b, "void");
    if (!r) r = FieldType(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '<' FieldType (',' FieldType)* '>'
  public static boolean GenericType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "GenericType")) return false;
    if (!nextTokenIs(b, LT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, GENERIC_TYPE, null);
    r = consumeToken(b, LT);
    p = r; // pin = 1
    r = r && report_error_(b, FieldType(b, l + 1));
    r = p && report_error_(b, GenericType_2(b, l + 1)) && r;
    r = p && consumeToken(b, GT) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (',' FieldType)*
  private static boolean GenericType_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "GenericType_2")) return false;
    int c = current_position_(b);
    while (true) {
      if (!GenericType_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "GenericType_2", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // ',' FieldType
  private static boolean GenericType_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "GenericType_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && FieldType(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ('include' | 'cpp_include') Literal
  public static boolean Include(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Include")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, INCLUDE, "<include>");
    r = Include_0(b, l + 1);
    p = r; // pin = 1
    r = r && consumeToken(b, LITERAL);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // 'include' | 'cpp_include'
  private static boolean Include_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Include_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "include");
    if (!r) r = consumeToken(b, "cpp_include");
    exit_section_(b, m, null, r);
    return r;
  }
